# minipodcast_com_ia

./: .gitignore  README.md  podcast.py  pyproject.toml  requirements.txt
src/: create_audio.py  graph.py  state_app.py
